Apple mobile device letter spacing fix

--- a/client/src/components/App/index.scss
+++ b/client/src/components/App/index.scss
@@ -11,4 +11,5 @@
   margin: 0 auto;
   font-size: 5em;
   text-align: center;
+  font-weight: 400;
 }
